Revision history for Test-Harness

3.01
        - Fix for RHEL incpush.patch related failure.

3.00    2007-11-06
        - Non-dev release. No changes since 2.99_09.

2.99_09 2007-11-05
        - Implemented TODO-in-PLAN syntax for TAP version 12 and earlier.

2.99_08 2007-11-04
        - Tiny changes. New version pushed to get some smoke coverage.

2.99_07 2007-11-01
        - Fix for #21938: Unable to handle circular links
        - Fix for #24926: prove -b and -l should use absolute paths
        - Fixed prove switches. Big oops. How the hell did we miss that?
        - Consolidated quiet, really_quiet, verbose into verbosity.
        - Various VMS related fixes to tests

2.99_06 2007-10-30
        - Added skip_all method to TAP::Parser.
        - Display reason for skipped tests.
        - make test now self tests.

2.99_05 2007-10-30
        - Fix for occasional rogue -1 exit code on Windows.
        - Fix for @INC handling under CPANPLUS.
        - Added real time to prove --timer output
        - Improved prove error message in case where 't' not found and
          no tests named.

2.99_04 2007-10-11
        - Fixed bug where 'All tests successful' would not be printed if bonus
          tests are seen.
        - Fixed bug where 'Result: FAIL' would be printed at the end of a test
          run if there were unexpectedly succeeding tests.
        - Added -M, -P switches to allow arbitrary modules to be loaded
          by prove. We haven't yet defined what they'll do once they
          load but it's a start...
        - Added testing under simulated non-forking platforms.

2.99_03 2007-10-06
        - Refactored all display specific code out of TAP::Harness.
        - Relaxed strict parsing of skip plan for pre v13 TAP.
        - Elapsed hi-res time is now displayed in integer milliseconds
          instead of fractional seconds.
        - prove stops running if any command-line switches are invalid.
        - prove -v would try to print an undef.