@@ -2,6 +2,7 @@ Revision history for Test-Harness
 
 3.01
         - Fix for RHEL incpush.patch related failure.
+        - Output real time of test completion with --timer
 
 3.00    2007-11-06
         - Non-dev release. No changes since 2.99_09.
